# AIPackager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
ai_export/: INDEX.txt  SOURCE_part01.txt
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/core/: ChunkManager.hpp  IndexBuilder.hpp  Packager.hpp  Scanner.hpp
core/src/: ChunkManager.cpp  IndexBuilder.cpp  Packager.cpp  Scanner.cpp
gui/: CMakeLists.txt
gui/src/: main.cpp
